--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "current-device": "^0.7.8",
     "element-ui": "^2.4.11",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1"
