--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "current-device": "^0.7.8",
     "element-ui": "^2.4.11",
+    "fullcalendar": "^3.10.0",
+    "jquery": "^3.3.1",
     "loadsh": "0.0.3",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1"
   },
